# DGB-Sentinel-AI

./: CHANGELOG.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml  (+1 more)
docs/: ARCHITECTURE.md  AUDITOR_SUMMARY.md  CONTRACT.md  INDEX.md  INTEGRATION.md  MIGRATION_V2_TO_V3.md  RELEASE_v3.0.0.md  RELEASE_v3.1.0.md  whitepaper-sentinel-ai-v2.md
examples/: block_progress_chart.py  block_progress_recorder.py
tests/: __init__.py  test_contract_v3_fail_closed.py  test_coverage_adaptive_core_bridge_and_hooks.py  test_coverage_cli_and_server_smoke.py  test_coverage_cli_more_branches.py  test_coverage_model_loader.py  test_coverage_scoring_and_correlation.py  test_coverage_scoring_more_branches.py  test_coverage_v3_and_api_smoke.py  test_coverage_v3_types_more_branches.py  test_coverage_wrapper_sentinel_wrapper.py  test_coverage_wrapper_workflow.py  test_integration_adaptive_entrypoint.py  test_smoke.py  test_step3_adaptive_and_feedback_hooks.py  test_toxic_telemetry_regression_pack.py  test_v2_v3_no_drift.py  test_v3_2_manifest_verdict_lock.py  test_v3_full_coverage_lock.py  test_v3_hash_unicode_normalization.py  test_v48g_real_oqs_mldsa_backend.py  test_v48h_e_oqs_falcon_backend.py  test_v48h_e_real_oqs_falcon_backend.py  test_v48h_fn_dsa_optional_evidence.py  test_v48h_fn_dsa_signed_message_kat.py  test_v4_context_hash_signature_binding.py  test_v4_crypto_verdict_contract.py  test_v4_missing_signature_fail_closed.py  test_v4_oqs_mldsa_backend.py  test_v4_real_crypto_backend_contract.py  test_v4_signature_tamper_fail_closed.py
(+39 files in other folders)
